syntax = "proto3";

package chat;

option go_package = "github.com/calmato/gran-book/api/proto/chat";

// Room - チャットルーム
message Room {
  string id = 1; // チャットルームID
  repeated string user_ids = 2; // 参加者ID一覧
  string created_at = 3; // 作成日時
  string updated_at = 4; // 更新日
  Message latest_message = 5; // 最新のメッセージ
}

// Message - チャットメッセージ
message Message {
  string id = 1; // チャットメッセージID
  string user_id = 2; // ユーザーID
  string text = 3; // テキストメッセージ
  string image = 4; // 添付画像
  string created_at = 5; // 送信日
}
